--- a/src/pages/components/styles.css
+++ b/src/pages/components/styles.css
@@ -5,6 +5,26 @@
   background: #FF2CBD; 
   box-shadow: 0 0 10px 0 #FECDFF; 
 }
+.loading-text {
+  font-size: 1.5rem; /* Adjust the font size as needed */
+  color: #FF2CBD;    /* Match the color with your dash elements */
+  font-weight: bold;  /* Make the text bold */
+}
+
+/* Bounce animation */
+@keyframes bounce {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px); /* Adjust the bounce height */
+  }
+}
+
+/* Tailwind CSS class for animation */
+.animate-bounce {
+  animation: bounce 0.6s infinite;
+}
 
 .uno {
   transform-origin: center left;
