--- a/src/pages/components/styles.css
+++ b/src/pages/components/styles.css
@@ -89,3 +89,70 @@
   75% { transform: rotate(-360deg); }
   100% { transform: rotate(-360deg); }
 }
+
+
+.spoiler {
+  color: transparent;
+  background-position: right;
+  background-size: 100% 100%;
+  background-image: linear-gradient(#a0aec0, #a0aec0);
+  display: inline;
+  background-repeat: no-repeat;
+  transition: all 500ms ease-in-out;
+}
+
+.spoiler:hover {
+  color: #000;
+  background-size: 0% 100%;
+}
+
+video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.simpletext {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  font-weight: 400!important;
+  font-size: 28vw!important;
+  text-transform: uppercase;
+  background-color: #ffffff!important;
+  mix-blend-mode: screen;
+}
+
+.mainh1 {
+  color: hsl(0, 0%, 28%);
+  font-weight: bold;
+  font-family: monospace;
+  letter-spacing: 7px;
+  cursor: pointer;
+}
+
+.mainh1 span {
+  transition: 0.5s ease-out;
+}
+.mainh1:hover span:nth-child(1) {
+  margin-right: 5px;
+}
+.mainh1:hover span:nth-child(1):after {
+  content: "'";
+}
+.mainh1:hover span:nth-child(2) {
+  margin-left: 30px;
+}
+.mainh1:hover span {
+  color: #fff;
+  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 40px #fff;
+}
